# deteccao_keypoints_vacas

./: .gitignore  README.md  pyproject.toml
config/: config-eda-mutual-info.yaml  config-eda.yaml  config.yaml
docs/: analise_features.md
src/: cli.py
src/analise_features/: __init__.py  analise_exploratoria.py
src/classificacao/: avaliacao_classificador.py  gerador_dataset_features.py  inferencia_classificador.py  mlp_torch.py  siamese_torch.py  treino_classificador.py
src/fiftyone_tools/: __init__.py  exporter.py
src/keypoints/: conversor_yolo_pose.py  inferencia_pose.py  parser_label_studio.py  treino_pose.py
src/projeto_vacas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/util/: contratos.py  geometria.py  logging_cfg.py  visualizacao.py
